PROJECT(PATHSCALE)

SET(CMAKE_C_FLAGS "-D_LANGUAGE_C ${CMAKE_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "-D_LANGUAGE_C_PLUS_PLUS ${CMAKE_CXX_FLAGS}")

INCLUDE(includes.cmake)

EXECUTE_PROCESS(COMMAND "/bin/sh" ${PATHSCALE_SOURCE_DIR}/be/com/gen_preg_list.sh ${PATHSCALE_SOURCE_DIR}/common/util
                WORKING_DIRECTORY ${PATHSCALE_BINARY_DIR})

ADD_DEFINITIONS(-D_GNU_SOURCE)

ADD_SUBDIRECTORY(driver)
ADD_SUBDIRECTORY(libcif)
ADD_SUBDIRECTORY(libcmplrs)
ADD_SUBDIRECTORY(libdwarf)
ADD_SUBDIRECTORY(libelf)
ADD_SUBDIRECTORY(common/targ_info)
ADD_SUBDIRECTORY(common/util)
ADD_SUBDIRECTORY(be)
ADD_SUBDIRECTORY(libpscrt)
ADD_SUBDIRECTORY(wgen)
