# Example cflags
# gcc -m64 -D_SGI_SOURCE -D_LANGUAGE_C -Wformat -funsigned-char -D__GNU_BUG_WORKAROUND -c     -D_IP_NAN_SETS_ERRNO -D_HDW_SQRT -DNO_LONG_DOUBLE -D_SW_PIPELINE -DPIC -I../include -I../../libmpath -I../../libmpath/../libm -I../../libmpath/amd -DFE_GNU_4_2_0  -DTARG_X8664 -DKEY   -std=gnu99 -D_GNU_SOURCE   -I../include  -O3 -LNO:vintr=0 -D_MIPSEL -DTARG_LINUX -D_LONGLONG -D_MIPS_SZINT=32 -D_MIPS_SZPTR=32 -D_MIPS_SZLONG=32 -MMD ../../libmpath/amd/vrsapowf.c -o vrsapowf.c


SET(PATHSCALE_MV_SRCS   "vrdacos.c"
			"vrdaexp.c"
			"vrdalog.c"
			"vrdalog10.c"
			"vrdasin.c"
			"vrdasincos.c"
			"vrsaexpf.c"
			"vrsalogf.c"
			"vrd2cos.c"
			"vrd2cosh.c"
			"vrd2exp.c"
			"vrd2log.c"
			"vrd2log10.c"
			"vrd2pow.c"
			"vrd4pow.c"
			"vrd2sin.c"
			"vrd2sincos.c"
			"vrd2sinh.c"
			"vrd4cos.c"
			"vrd4exp.c"
			"vrd4log.c"
			"vrd4log10.c"
			"vrd4sin.c"
			"vrs4cosf.c"
			"vrs4expf.c"
			"vrs4log10f.c"
			"vrs4logf.c"
			"vrs4powf.c"
			"vrs4sinf.c"
			"vrs8expf.c"
			"vrs8logf.c"
			"vrs8powf.c"
			"vacos.c"
			"vacosf.c"
			"vasin.c"
			"vasinf.c"
			"vatan.c"
			"vatanf.c"
			"vcis.c"
			"vcisf.c"
			"vcos.c"
			"vcosf.c"
			"vexp.c"
			"vexpf.c"
			"vlog.c"
			"vlog10.c"
			"vlog10f.c"
			"vlogf.c"
			"vsin.c"
			"vsinf.c"
			"vsqrt.c"
			"vsqrtf.c"
			"vtan.c"
			"vtanf.c"
			"vrdapow.c"
			"vrsapowf.c")

add_library(mv STATIC ${PATHSCALE_MV_SRCS})
