# Example cflags
# gcc -m64 -D_SGI_SOURCE -D_LANGUAGE_C -Wformat -funsigned-char -D__GNU_BUG_WORKAROUND -DCOMPILING_LOG10 -c     -D_IP_NAN_SETS_ERRNO -D_HDW_SQRT -DNO_LONG_DOUBLE -DPIC -I../include -I../../libmpath -I../../libmpath/../libm -I../../libmpath/amd -DFE_GNU_4_2_0  -DTARG_X8664 -DKEY  -Werror -std=gnu99 -D_GNU_SOURCE --include ../../libmpath/amd/hidden.h -D_libm_weak=1  -I../include  -O3 -LNO:vintr=0 -D_MIPSEL -DTARG_LINUX -D_LONGLONG -D_MIPS_SZINT=32 -D_MIPS_SZPTR=32 -D_MIPS_SZLONG=32 -MMD ../../libmpath/amd/w_logf.c -o w_log10f.c

SET(PATHSCALE_MPATH_SRCS        "w_copysignf.c"
				"w_copysign.c"
				"w_finitef.c"
				"w_finite.c"
				"w_fmaxf.c"
				"w_fmax.c"
				"w_fminf.c"
				"w_fmin.c"
				"w_fastcos.c"
				"w_fastexp.c"
				"w_fastexpf.c"
				"w_fastlog.c"
				"w_fastlogf.c"
				"w_fastlog10.c"
				"w_fastpow.c"
				"w_fastpowf.c"
				"w_fastsin.c"
				"w_fastsincos.c"
				"w_pow.c"
				"cis.c"
				"cisf.c"
				"pow_errorl.c"
				"remainder_piby2d2f.c"
				"s_atan2.c"
				"s_atan2f.c"
				"s_atan.c"
				"s_atanf.c"
				"s_ceil.c"
				"s_ceilf.c"
				"s_fdim.c"
				"s_fdimf.c"
				"s_floor.c"
				"s_floorf.c"
				"s_fma.c"
				"s_fmaf.c"
				"s_logb.c"
				"s_logbf.c"
				"s_modf.c"
				"s_modff.c"
				"s_tan.c"
				"s_tanf.c"
				"s_trunc.c"
				"s_truncf.c"
				"w_acos.c"
				"w_acosf.c"
				"w_asin.c"
				"w_asinf.c"
				"w_cosh.c"
				"w_coshf.c"
				"w_exp10.c"
				"w_exp10f.c"
				"w_exp2.c"
				"w_exp2f.c"
				"w_exp.c"
				"w_expf.c"
				"w_hypot.c"
				"w_hypotf.c"
				"w_powf.c"
				"w_remainder.c"
				"w_remainderf.c"
				"w_remainder_piby2.c"
				"w_remainder_piby2f.c"
				"w_sincos.c"
				"w_sincosf.c"
				"w_sinh.c"
				"w_sinhf.c"
				"w_tanh.c"
				"w_tanhf.c"
				"w_log2.c"
				"w_log2f.c"
				"w_log10.c"
				"w_log10f.c")

add_library(mpath STATIC ${PATHSCALE_MPATH_SRCS})
#set_property(TARGET pscrt-static PROPERTY OUTPUT_NAME pscrt)
