SET(PATHSCALE_FE90_SRCS "cifcmnrecs.f"
			"cifftnrecs.f"
			"cmd_line.f"
			"cond_comp.f"
			"debug.f"
			"fecif.f"
			"fold_drive.f"
			"fortout.f"
			"i_cvrt.f"
			"inline.f"
			"ir.f"
			"lex.f"
			"main.f"
			"messages.f"
			"module.f"
			"nameres.f"
			"p_asg_expr.f"
			"p_ctl_flow.f"
			"p_dcl_attr.f"
			"p_dcl_pu.f"
			"p_dcl_util.f"
			"p_dcls.f"
			"p_directiv.f"
			"p_driver.f"
			"p_end.f"
			"p_io.f"
			"p_utils.f"
			"release.f"
			"s_asg_expr.f"
			"s_call.f"
			"s_cnstrct.f"
			"s_ctl_flow.f"
			"s_data.f"
			"s_dcl_pu.f"
			"s_dcls.f"
			"s_directiv.f"
			"s_driver.f"
			"s_end.f"
			"s_interoperable.f"
			"s_intrin.f"
			"s_io.f"
			"s_rcnstrct.f"
			"s_typ_init.f"
			"s_utils.f"
			"src_input.f"
			"sytb.f"
			"utils.f"
			"fold.f")

add_library(fe90 STATIC ${PATHSCALE_FE90_SRCS})
